# Discord-bottibot

./: .gitignore  LICENSE  Procfile  README.md  app.yaml  pyproject.toml  requirements.txt
discord_bottibot/: bottibot.py  bottibot_general.py  botticommand.py  context.py  discord_cmnd_chat.py  discord_cmnd_executable.py  discord_cmnd_hello.py  discord_cmnd_help.py  discord_cmnd_msche.py  executable_manager.py  logger.py  main.py  test.py
